# SprzatanieDjango

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  manage.py  pyproject.toml  requirements.txt
dashboard/: admin.py  models.py  tests.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0001_squashed_0009_alter_activity_date_created_and_more.py  0002_alter_activity_date_created.py  0003_alter_activity_date_created.py  0004_alter_activity_date_created.py  0005_alter_execution_execution_date.py  0006_alter_execution_executed_by_delete_participant.py  0007_alter_execution_activity.py  0008_alter_execution_activity_alter_execution_executed_by.py  0009_alter_activity_date_created_and_more.py  0010_activity_notes.py  0011_execution_executed_by_many_and_more.py  0012_auto_20241018_0631.py  0013_remove_execution_executed_by.py  0014_rename_executed_by_many_execution_executed_by.py  0015_alter_execution_executed_by.py  0016_alter_activity_notes.py  0016_dashboard.py  0017_activity_dashboard.py  0018_auto_20241022_1306.py  0019_alter_activity_dashboard.py  0020_alter_activity_notes.py
dashboard/static/dashboard/: style.css
dashboard/templates/dashboard/: activity_confirm_delete.html  activity_form.html  detail.html  execution_form.html  index.html  upload.html
dashboard/templatetags/: display_extras.py
sprzatanie/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_models.py  test_views.py  test_yaml.py
