[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SprzatanieDjango"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dominik Stańczak-Marikin", email = "stanczakdominik+github@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "django",
    "pyyaml",
    "python-dotenv",
    "dj-database-url",
    "gunicorn", # TODO should this be defined here?
    "whitenoise",
    ]

[project.urls]
Documentation = "https://github.com/stanczakdominik/djangosprzatanie#readme"
Issues = "https://github.com/stanczakdominik/djangosprzatanie/issues"
Source = "https://github.com/stanczakdominik/djangosprzatanie"

[tool.hatch.version]
path = "dashboard/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.env-vars]
DJANGO_DEBUG = 'False'


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:sprzatanie dashboard tests}"

[tool.hatch.envs.dev]
extra-dependencies = [
    "pytest","pytest-django", "pytest-cov", "django-debug-toolbar", "pytest-watcher"
]

[tool.hatch.envs.dev.scripts]
serve = "python manage.py runserver"
test = "ptw . --delay 0.2 -vv --cov"

[tool.hatch.envs.dev.env-vars]
DJANGO_DEBUG = 'True'

[tool.coverage.run]
source_pkgs = ["sprzatanie", "dashboard", "tests"]
branch = true
parallel = true
omit = [
  "dashboard/__about__.py",
  "sprzatanie/asgi.py",
  "sprzatanie/wsgi.py",
  "sprzatanie/urls.py",
  "sprzatanie/settings.py"
]

[tool.coverage.paths]
djangosprzatanie = ["src/djangosprzatanie", "*/djangosprzatanie/src/djangosprzatanie"]
sprzatanie = ["sprzatanie", "dashboard"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
omit = [
  "sprzatanie/urls.py"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sprzatanie.settings"
python_files = "tests.py test_*.py *_tests.py"
